--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,19 +13,8 @@
   color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 body {
   color: #367;
-  margin-left: 50px;
-  margin-right: 50px;
 }
 
 .card h4 {
@@ -44,12 +22,12 @@ body {
 }
 
 .card {
-  transition: .5s;
+  transition: .25s;
   background: #eee;
 }
 
 .card:hover, h5 {
-  color: #2853e2;
+  color: #eee;
 } 
 
 .card:hover {
@@ -84,3 +62,14 @@ body {
 a {
   color: #367;
 }
+
+.card-content {
+  text-align: center;
+  font-weight: bold;
+}
+
+/* @media screen and (min-width: 900px) {
+  body {
+    background-color: pink;
+  }
+} */
